# DetectWritedNumber_runner

./: .gitignore  CMakeLists.txt  FrameAnalyzer.cpp  FrameAnalyzer.h  FramePreprocessor.cpp  FramePreprocessor.h  MNISTNet.py  PaintWindow.cpp  PaintWindow.h  README.md  main.cpp  test.py  trace_model.pt
includes/: FrameAnalyzer.h  FramePreprocessor.h  PaintWindow.h
model/: test.py
srcs/: FrameAnalyzer.cpp  FramePreprocessor.cpp  PaintWindow.cpp  main.cpp
test/: predicts_values.txt
